--- a/proyecto-estructurador/src/app/components/login/login.component.html
+++ b/proyecto-estructurador/src/app/components/login/login.component.html
@@ -40,10 +40,7 @@
 			
 			<input type="submit" value="iniciar sesion">
 
-			<p class="tx" align="center"><a class="indown" href="index.html">Recuperar contraseña</a></p>
+			<p class="tx" align="center"><a class="indown" [routerLink]="['/recuperar']">Recuperar contraseña</a></p>
 		</form>
 	</section>
 </div>
-
-
- <!--fin del cuerpo-->
